--- a/src/main/resources/templates/admin/Medicine/medicineList.html
+++ b/src/main/resources/templates/admin/Medicine/medicineList.html
@@ -50,6 +50,7 @@
                 </thead>
                 <tbody id="medicineTable"></tbody>
             </table>
+            <div class="mt-4 mb-5 text-center" id="paginationContainer"></div>
         </div>
         <!-- main-panel ends -->
     </div>
