--- a/src/main/resources/templates/views/detailMedicine.html
+++ b/src/main/resources/templates/views/detailMedicine.html
@@ -32,6 +32,7 @@
                  class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
 
             </div>
+            <div class="mt-4 mb-5 text-center" id="paginationContainer"></div>
         </div>
     </section>
     <div th:include="static/footer :: footer"></div>
